# token_mint-trans_fee_split

./: .gitignore  Cargo.toml  package-lock.json  package.json  test_devnet_mint.txt  test_devnet_trans.txt  test_localhost_mint.txt  test_localhost_trans.txt
keys/: fee_wallet1.json  fee_wallet1_pub.json  fee_wallet2.json  fee_wallet2_pub.json  fee_wallet3.json  fee_wallet3_pub.json  fee_wallet4.json  fee_wallet4_pub.json  fee_wallet5.json  fee_wallet5_pub.json  id.json  id_pub.json  program_pub.json  wallet1.json  wallet1_pub.json  wallet2.json  wallet2_pub.json  wallet3.json  wallet3_pub.json  wallet4.json  wallet4_pub.json
src/: entrypoint.rs  error.rs  instruction.rs  processor.rs
ts/: mint.ts  trans.ts  utils.ts
